js/src/tests/test262/built-ins/Error/prototype/stack/getter-receiver-is-proxy.js





















var get = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').get;





assert.sameValue(
  get.call(new Proxy(new Error('inner'), allowProxyTraps(null, '(a)'))),
  undefined,
  'Proxy wrapping Error returns undefined'
);






var stackTrapCalls = 0;
var pB = new Proxy(new Error('inner'), allowProxyTraps({
  get: function (t, key, receiver) {
    if (key === 'stack') {
      stackTrapCalls += 1;
    }
    return Reflect.get(t, key, receiver);
  }
}, '(b)'));
assert.sameValue(pB.stack, undefined, 'property access on proxy: receiver is proxy, no [[ErrorData]]');
assert.sameValue(stackTrapCalls, 1, 'get trap fired once for the property access');


assert.sameValue(
  get.call(new Proxy({}, allowProxyTraps(null, '(c)'))),
  undefined,
  'Proxy wrapping plain object returns undefined'
);

reportCompare(0, 0);
